--- a/GamaFrontEnd/src/app/home/gama-file/gama-file.component.css
+++ b/GamaFrontEnd/src/app/home/gama-file/gama-file.component.css
@@ -272,3 +272,17 @@ textarea:focus {
     margin-top: 7px;
     cursor: pointer;
 }
+
+.img-common {
+    border: solid 1px #555;
+    border-radius: 5px;
+    margin-top: 3px;
+    width: 19px;
+}
+
+.save {
+    float: right;
+    margin-right: 20px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
