--- a/GamaFrontEnd/src/app/home/gama-file/gama-file.component.html
+++ b/GamaFrontEnd/src/app/home/gama-file/gama-file.component.html
@@ -232,8 +232,8 @@
                                 <label for="" style="margin-left: 10px;">map</label>
                             </div>
                         </div>
-                        <div style="width: 100%; border-bottom: solid 1px #555;">
-                            <!-- <img style="object-fit: contain;" src="{{chartUrl}}" alt="" *ngIf="chartUrl" /> -->
+                        <div class="chart">
+                            <img style="object-fit: contain;" src="{{chartUrl}}" alt="" *ngIf="chartUrl" />
                         </div>
                     </div>
                 </div>
